Update standard-deployment.md